--- a/package.json
+++ b/package.json
@@ -9,25 +9,26 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@gsap/react": "^2.1.0",
+        "@supabase/ssr": "^0.8.0",
+        "@supabase/supabase-js": "^2.39.7",
+        "clsx": "^2.1.0",
+        "framer-motion": "^11.0.8",
+        "gsap": "^3.12.5",
+        "lucide-react": "^0.344.0",
         "next": "14.1.0",
         "react": "^18",
         "react-dom": "^18",
-        "gsap": "^3.12.5",
-        "@gsap/react": "^2.1.0",
-        "lucide-react": "^0.344.0",
-        "framer-motion": "^11.0.8",
-        "@supabase/supabase-js": "^2.39.7",
-        "clsx": "^2.1.0",
         "tailwind-merge": "^2.2.1"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.10",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "autoprefixer": "^10.0.1",
         "postcss": "^8",
         "tailwindcss": "^3.3.0",
-        "@tailwindcss/typography": "^0.5.10",
         "typescript": "^5"
     }
 }
