--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@gsap/react": "^2.1.0",
+        "@dnd-kit/core": "^6.3.1",
+    	"@dnd-kit/modifiers": "^9.0.0",
+    	"@dnd-kit/sortable": "^10.0.0",
+    	"@dnd-kit/utilities": "^3.2.2",
+	"@gsap/react": "^2.1.0",
         "@supabase/ssr": "^0.8.0",
         "@supabase/supabase-js": "^2.39.7",
         "clsx": "^2.1.0",
