--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     },
     "dependencies": {
         "@dnd-kit/core": "^6.3.1",
-    	"@dnd-kit/modifiers": "^9.0.0",
-    	"@dnd-kit/sortable": "^10.0.0",
-    	"@dnd-kit/utilities": "^3.2.2",
-	"@gsap/react": "^2.1.0",
+        "@dnd-kit/modifiers": "^9.0.0",
+        "@dnd-kit/sortable": "^10.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
+        "@gsap/react": "^2.1.0",
         "@supabase/ssr": "^0.8.0",
         "@supabase/supabase-js": "^2.39.7",
         "clsx": "^2.1.0",
@@ -21,10 +21,12 @@
         "gsap": "^3.12.5",
         "lucide-react": "^0.344.0",
         "next": "14.1.0",
+        "next-pwa": "^5.6.0",
         "react": "^18",
         "react-dom": "^18",
         "resend": "^6.8.0",
-        "tailwind-merge": "^2.2.1"
+        "tailwind-merge": "^2.2.1",
+        "web-push": "^3.6.7"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.10",
